--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
-body{
-    background-color: rgb(23, 1, 45);
+:root{
+    --branco-principal:#ffffff;
+    --cinza-secundario: #C0c0c0;
+    --botao-azul:#167bf7;
+    --cor-de-fundo:#00030c;
 }
 
-h1{
-    color: white;
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background: var(--cor-de-fundo);
+    color: var(--branco-principal)
 }
